fix: background blur flickering with safari try 4

--- a/source/css/layout/_partials/home-banner.styl
+++ b/source/css/layout/_partials/home-banner.styl
@@ -13,7 +13,7 @@ $home-banner-icon-size = 1.6rem
   transition filter 0.3s ease
 
 .no-flicker
-  -webkit-transform translate3d(0,0,-0.5px);
+  -webkit-transform: translate3d(0,0,0);
 
 .home-banner-container
   font-family 'Chillax-Variable', sans-serif
